force-app/main/default/objects/Deadline_Rule__mdt/Deadline_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Deadline Rule</label>
    <pluralLabel>Deadline Rules</pluralLabel>
</CustomObject>