force-app/main/default/objects/Deadline_Rule__mdt/fields/Policy_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Status__c</fullName>
    <label>Policy Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>