force-app/main/default/objects/Deadline_Rule__mdt/fields/Task_Action__c.field-meta.xml
<CustomField>
    <fullName>Task_Action__c</fullName>
    <label>Task Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>