force-app/main/default/objects/Deadline_Rule__mdt/fields/ThresholdDays__c.field-meta.xml
<CustomField>
    <fullName>ThresholdDays__c</fullName>
    <label>Threshold Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>